# engine64

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
demos/example01/: Example01.vcxproj  Example01.vcxproj.filters  README.md
demos/example01/src/: RecompilableExample.cpp  RecompilableExample.hpp  main.cpp
project/VS2022/: Ctrl-Alt-Test.sln  Engine.vcxproj  Engine.vcxproj.filters  FunctionalTests.vcxproj  FunctionalTests.vcxproj.filters  GraphicLayer.vcxproj  GraphicLayer.vcxproj.filters  Platform.vcxproj  Platform.vcxproj.filters  allCommon.props  ctrl-alt-test.natvis  debugCommon.props  debugReleaseCommon.props  editCommon.props  releaseCommon.props  sizeCommon.props
src/engine/: EngineConfig.hpp
src/engine/algebra/: Functions.cpp  Functions.hpp  Interpolation.hpp  Interpolation.hxx  Utils.hpp
src/engine/container/: Algorithm.cpp  Algorithm.hpp  Algorithm.hxx  Array.hpp  Array.hxx  HashTable.hpp  HashTable.hxx  Utils.hpp  test.cc
src/engine/core/: Settings.cpp  Settings.hpp  StringUtils.cpp  StringUtils.hpp  msys_temp.cpp  msys_temp.hpp
src/engine/debug/: Assert.cpp  Assert.hpp  Debug.cpp  Debug.hpp  DebugSettings.cpp  DebugSettings.hpp  Log.cpp  Log.hpp
src/engine/noise/: Hash.cpp  Hash.hpp  Rand.cpp  Rand.hpp
src/engine/timeline/: Interpolation.hpp
src/functionaltests/: main.cpp
src/gfx/: BlendingMode.hpp  DrawArea.hpp  Geometry.hpp  GraphicLayerConfig.hpp  Helpers.cpp  IGraphicLayer.hpp  IGraphicLayerImplementations.hpp  PolygonMode.hpp  RasterTests.hpp  ResourceID.cpp  ResourceID.hpp  ShadingParameters.cpp  ShadingParameters.hpp  TextureFormat.hpp  Uniform.hpp  Uniform.hxx  VertexAttribute.hpp
src/gfx/DirectX/: DirectXLayer.cpp  DirectXLayer.hpp
src/gfx/OpenGL/: Extensions.cpp  Extensions.hpp  OpenGLLayer.cpp  OpenGLLayer.hpp  OpenGLTypeConversion.cpp  OpenGLTypeConversion.hpp  glext.h
src/platform/: IPlatform.hpp  InputEvents.hpp  MultiThreading.cpp  MultiThreading.hpp  Platform.hpp  Win32Dialog.cpp  Win32Dialog.hpp  Win32Font.cpp  Win32Font.hpp  Win32Platform.cpp  Win32Platform.hpp  XLibPlatform.cpp  XLibPlatform.hpp
